--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background-image: url("images/Background WB.png");
+      background-image: url("Background WB.png");
       background-size: cover;       
       background-repeat: no-repeat; 
       background-attachment: fixed; 
@@ -255,7 +255,7 @@
 
     <!-- Center logo -->
     <div class="header-center">
-      <img src="images/Teen_Titans_Go!_horizontal_logo.svg.png" alt="Logo" class="logo">
+      <img src="Teen_Titans_Go!_horizontal_logo.svg.png" alt="Logo" class="logo">
     </div>
 
     <div class="nav-buttons">
@@ -307,25 +307,25 @@
       <h2>Members of IKEA Group</h2>
       <div class="members-grid">
         <div class="member-card">
-          <img src="images/Raven-removebg-preview.png" alt="Elijah" class="member-img">
+          <img src="Raven-removebg-preview.png" alt="Elijah" class="member-img">
           <div class="member-info">
             <p><strong>Elijah R. Mag-usara</strong><br><em>Scriber ✍️</em></p>
           </div>
         </div>
         <div class="member-card">
-          <img src="images/Starfire-removebg-preview.png" alt="Ianna" class="member-img">
+          <img src="Starfire-removebg-preview.png" alt="Ianna" class="member-img">
           <div class="member-info">
             <p><strong>Ianna Fe Alferez</strong><br><em>Skipper 🚀</em></p>
           </div>
         </div>
         <div class="member-card">
-          <img src="images/Robin-removebg-preview.png" alt="Kurt" class="member-img">
+          <img src="Robin-removebg-preview.png" alt="Kurt" class="member-img">
           <div class="member-info">
             <p><strong>Kurt Yohan Del Corro</strong><br><em>Cracker 💥</em></p>
           </div>
         </div>
         <div class="member-card">
-          <img src="images/Beastboy-removebg-preview.png" alt="Arthur" class="member-img">
+          <img src="Beastboy-removebg-preview.png" alt="Arthur" class="member-img">
           <div class="member-info">
             <p><strong>Arthur Malazarte</strong><br><em>Digger ⚒️</em></p>
           </div>
