--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 
     <!-- Center logo -->
     <div class="header-center">
-      <img src="Teen_Titans_Go_horizontal_logo.png" alt="Logo" class="logo"> <!-- ✅ renamed -->
+      <img src="Images/TeenTitansGo.png.png" alt="Logo" class="logo"> <!-- ✅ renamed -->
     </div>
 
     <div class="nav-buttons">
